# INF2604-ComputerGraphics

./: .gitignore  README.md
implementacoes/tracado_de_raio_simples/: CMakeLists.txt  README.md  raytracer
implementacoes/tracado_de_raio_simples/include/: camera.h  light.h  material.h  object.h  plane.h  ray.h  renderer.h  scene.h  sphere.h  vec3.h
implementacoes/tracado_de_raio_simples/src/: main.cpp
proj1/: CMakeLists.txt  README.md  basic_test  compile.sh  enunciado.txt  raytracer  simple_output.ppm  simple_raytracer  test_output.ppm  triangle_test  triangle_test.ppm
proj1/src/: basic_test.cpp  main.cpp  simple_raytracer.cpp  triangle_test.cpp
proj1/src/core/: Color.h  Image.h  Ray.h  Vector3.cpp  Vector3.h
proj1/src/geometry/: Box.cpp  Box.h  Object.h  Sphere.cpp  Sphere.h  TransformedObject.h  Triangle.cpp  Triangle.h
proj1/src/lighting/: Light.h  PointLight.h
proj1/src/scene/: Camera.h  Material.h  ReflectiveMaterial.h  Scene.h
proj1/src/utils/: Sampler.h  Transform.h
raytracer/: CMakeLists.txt  README.md
raytracer/examples/: basic_scene.json  cornell_box.cpp  enhanced_scene.cpp
raytracer/include/core/: Camera.h  Color.h  HitRecord.h  Ray.h  Renderer.h  Scene.h  Vector3.h
raytracer/include/geometry/: Box.h  Primitive.h  Scene.h  Sphere.h
raytracer/include/light/: AmbientLight.h  Light.h  PointLight.h  RectLight.h
raytracer/include/transform/: Rotate.h  Transform.h  Translate.h
raytracer/include/utils/: Color.h  Vector3D.h
raytracer/output/: cornell_box.ppm  test_4spp_20250401_212926.ppm
raytracer/scripts/: build_and_run.sh  convert_ppm.py  render_test.py  run_cornell_box.sh  run_enhanced.sh
raytracer/src/: main.cpp
raytracer/src/geometry/: Box.cpp  Sphere.cpp
